@@ -1,11 +1,11 @@
 <CONFIG lastUpdated="2004-03-18" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="eLife_Config_Schema.xsd">
         <DESC>Demonstration configuration for Nuvo</DESC>
          <!-- ______________________________________  Nuvo DEFS  ____________________  -->
-        <DEVICE ACTIVE="N" DEVICE_TYPE="NUVO" DESCRIPTION="Nuvo Audio Switch">
+        <DEVICE ACTIVE="Y" DEVICE_TYPE="NUVO" DESCRIPTION="Nuvo Audio Switch">
                 <CONNECTION>
-                        <SERIAL ACTIVE="N" PORT="/dev/tty.USB Serial" SUPPORTS_CD="N" BAUD="9600" STOP_BITS="1" PARITY="N" DATA_BITS="8" FLOW="RTSCTS"/>
-                        <IP ACTIVE="Y" IP_ADDRESS="127.0.0.1" PORT="5001"/>
-                        <IP ACTIVE="N" IP_ADDRESS="192.168.1.70" PORT="4999"/>
+                        <SERIAL ACTIVE="N" PORT="/dev/tty.USB Serial" SUPPORTS_CD="N" BAUD="9600" STOP_BITS="1" PARITY="N" DATA_BITS="8" FLOW="NONE"/>
+                        <IP ACTIVE="N" IP_ADDRESS="127.0.0.1" PORT="5001"/>
+                        <IP ACTIVE="Y" IP_ADDRESS="192.168.1.70" PORT="5000"/>
                 </CONNECTION>
                 <CATALOGUE NAME="Nuvo Audio Inputs">
                         <ITEM CODE="cd1" VALUE="1"/>
@@ -18,9 +18,9 @@
                 </PARAMETERS>
                 <NUVO>
                         <AUDIO KEY="0" DISPLAY_NAME="ALL"/>
-                        <AUDIO KEY="1" DISPLAY_NAME="FAMILY_AUDIO"/>
-                        <AUDIO KEY="2" DISPLAY_NAME="KITCHEN_AUDIO"/>
-                        <AUDIO KEY="3" DISPLAY_NAME="STUDY_AUDIO"/>
+                        <AUDIO KEY="2" DISPLAY_NAME="FAMILY_AUDIO"/>
+                        <AUDIO KEY="1" DISPLAY_NAME="KITCHEN_AUDIO"/>
+                        <AUDIO KEY="3" DISPLAY_NAME="MASTER_BED_AUDIO"/>
                 </NUVO>
         </DEVICE>
         
