@@ -142,9 +142,9 @@
         <DEVICE ACTIVE="N" DEVICE_TYPE="DYNALITE" DESCRIPTION="DynaLite Lights">
                 <CONNECTION>
                         <SERIAL ACTIVE="N" PORT="COM1" BAUD="9600" STOP_BITS="1" PARITY="N" DATA_BITS="8" SUPPORTS_CD="N"  FLOW="NONE"/>
-                        <SERIAL ACTIVE="N" PORT="/dev/tty.USB Serial" BAUD="9600" STOP_BITS="1" PARITY="N" DATA_BITS="8" SUPPORTS_CD="N" FLOW="NONE" />
+                        <SERIAL ACTIVE="Y" PORT="/dev/tty.USB Serial" BAUD="9600" STOP_BITS="1" PARITY="N" DATA_BITS="8" SUPPORTS_CD="N" FLOW="NONE" />
                         <IP ACTIVE="N" IP_ADDRESS="127.0.0.1" PORT="5001"/>
-                        <IP ACTIVE="Y" IP_ADDRESS="192.168.1.70" PORT="4999"/>
+                        <IP ACTIVE="N" IP_ADDRESS="192.168.1.70" PORT="4999"/>
                 </CONNECTION>
                 <PARAMETERS>
                 		<ITEM NAME="PROTOCOL" VALUE="CLASSIC" />
@@ -173,7 +173,7 @@
         </DEVICE>
 
         !-- ______________________________________  CBUS DEFS  ____________________  -->
-        <DEVICE ACTIVE="Y" DEVICE_TYPE="CBUS" DESCRIPTION="CBUS Lights">
+        <DEVICE ACTIVE="N" DEVICE_TYPE="CBUS" DESCRIPTION="CBUS Lights">
                 <CONNECTION>
                         <SERIAL ACTIVE="N" PORT="COM1" BAUD="9600" STOP_BITS="1" PARITY="N" DATA_BITS="8" FLOW="NONE"/>
                         <SERIAL ACTIVE="N" PORT="/dev/tty.USB Serial" BAUD="9600" STOP_BITS="1" PARITY="N" DATA_BITS="8" SUPPORTS_CD="N" FLOW="RTSCTS" />
@@ -559,7 +559,7 @@
         <CONTROLS>
                 <VARIABLES>
                         <VARIABLE ACTIVE="N" NAME="Master Bedroom Light" DISPLAY_NAME="MASTERBED_LIGHT"/>
-                        <VARIABLE ACTIVE="Y" NAME="Bedroom 4 light" DISPLAY_NAME="BED4_LIGHT"/>
+                        <VARIABLE ACTIVE="N" NAME="Bedroom 4 light" DISPLAY_NAME="BED4_LIGHT"/>
                         <VARIABLE ACTIVE="Y" NAME="Lattitude" DISPLAY_NAME="Lattitude" INIT_COMMAND="on" INIT_EXTRA="-33.52" />
                         <VARIABLE ACTIVE="Y" NAME="Longitude" DISPLAY_NAME="Longitude" INIT_COMMAND="on" INIT_EXTRA="151.12" />
                  </VARIABLES>
